--- a/src/companents/books/style/style.css
+++ b/src/companents/books/style/style.css
@@ -32,6 +32,7 @@
     align-items: center;
     flex-direction: column;
     padding: 10px;
+    height: 400px;
     border-radius: 10px;
     background: #FFF;
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.30);
@@ -39,14 +40,21 @@
 
 .book-card-img {
     width: 100%;
-    height: 100%;
+    height: 250px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .book-card-img img {
-    width: 100%;
-    height: 100%;
+    width: auto;
+    height: 270px !important;
 }
 
+.books a {
+    color: rgba(0, 92, 71);;
+}
 
 .book-card h1 {
     font-size: 28px;
@@ -64,6 +72,18 @@
     margin-bottom: 10px;
 }
 
+.book-card-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 130px;
+    width: 100%;
+}
+
+.book-card-text span {
+    position: relative;
+    bottom: 10px;
+}
 
 
 @media (max-width: 768px) {
