--- a/src/companents/homepage/style/style.css
+++ b/src/companents/homepage/style/style.css
@@ -29,13 +29,23 @@
     flex-direction: column;
     align-items: center;
     padding: 9px 16px;
+    height: 400px;
     border-radius: 5px;
     background: #FFF;
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.30);
 }
 
+.news-card-img {
+    height: 250px !important;
+    overflow: hidden !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+
 .news-card-img img {
-    width: 100% !important;
+    width: 100%;
 }
 
 .news-card-text {
@@ -78,5 +88,11 @@
 @media (max-width: 768px) {
     .homepage {
         padding: 20px 50px;
+    }
+}
+
+@media (max-width: 500px) {
+    .homepage {
+        padding: 20px 20px;
     }
 }
