--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,30 @@ th, td {
 .ant-col {
   padding: 5px;
 }
+
+#ResumeContainer {
+  margin:auto;
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.PDFDocument {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.PDFPage {
+  box-shadow: 0 0 8px rgba(0, 0, 0, .5);
+}
+
+.PDFPageOne {
+  margin-bottom: 25px;
+}
+
+.PDFPage > canvas {
+  max-width: 100%;
+  height: auto !important;
+}
